--- a/TaquillaITH/Views/Home/Corte.cshtml
+++ b/TaquillaITH/Views/Home/Corte.cshtml
@@ -39,9 +39,8 @@
                         <p><b>Tipo de boleto: </b>@item.TipoBoletoId</p>
                         <p><b>Efectivo: </b>@item.Cash</p>
                         <p><b>Credito: </b>@item.CreditCard</p>
-                        <p><b>Credito: </b>@item.RewardPoints</p>
-                        <p><b>Total: </b>@item.TotalAmount</p
-                        <p><b>Credito: </b>@item.TipoBoletoId</p>
+                        <p><b>Puntos: </b>@item.RewardPoints</p>
+                        <p><b>Total: </b>@item.TotalAmount</p>
                         <p>------</p>
                         <br />
                         <br />
