--- a/TaquillaITH/Views/Shared/_Layout.cshtml
+++ b/TaquillaITH/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TaquillaITH</a>
+                <a class="navbar-brand" asp-area="" asp-controller="TicketSale" asp-action="Step1">TaquillaITH</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,13 +23,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TicketSale" asp-action="Step1">Cartelera</a>
                         </li>
-                        <li class="nav-item">
+                        <!--
+<li class="nav-item">
                             <a class="nav-link text-dark" href="https://cinemappi.herokuapp.com/">Cartelera</a>
                         </li>
+                        -->
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-action="Step1" asp-controller="TicketSale">Venta</a>
+                            <a class="nav-link text-dark" asp-action="Index" asp-controller="Home">Corte</a>
                         </li>
                     </ul>
                 </div>
