--- a/TaquillaITH/Views/TicketSale/_Step5.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step5.cshtml
@@ -1,14 +1,17 @@
-﻿<div style="text-align:left;">
-    <p><b>Película: </b><span id="movie"></span></p>
-    <p><b>Horario: </b><span id="runningTime"></span></p>
-    <p><b>Tipo de boleto: </b><span id="ticketType"></span></p>
-    <p><b>Efectivo: </b><span id="cash"></span></p>
-    <p><b>Credito: </b><span id="credit"></span></p>
-    <p><b>Puntos: </b><span id="points"></span></p>
-    <p><b>Total: </b><span id="total"></span></p>
-    <p>------</p>
-    <br />
-    <br />
-
+﻿<div class="card col-6 align-items-center">
+  <div class="card-body col-12">
+        <blockquote class="blockquote mb-0 align-items-center">
+            <p><b>Película: </b><span id="movie"></span></p>
+            <p><b>Horario: </b><span id="runningTime"></span></p>
+            <p><b>Tipo de boleto: </b><span id="ticketType"></span></p>
+            <p><b>Efectivo: </b><span id="cash"></span></p>
+            <p><b>Credito: </b><span id="credit"></span></p>
+            <p><b>Puntos: </b><span id="points"></span></p>
+            <p><b>Total: </b><span id="total"></span></p>
+            <p>------</p>
+            <br />
+            <br />
+        </blockquote>
+    </div>
     <button asp-controller="TicketSale" asp-action="Step1">Regresar</button>
 </div>
