--- a/TaquillaITH/Views/TicketSale/_Step4.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step4.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="card col-6 align-items-center">
+﻿<div class="card col-6 align-items-center" id="finaldiv">
   <div class="card-body col-12">
     <div id="PaymentCard">
         <blockquote class="blockquote mb-0 align-items-center">
@@ -13,4 +13,5 @@
             <button class="col-6 col-xl-6 btn btn-light mt-2 align-self-end" id="FINISHED">Continuar</button>
         </blockquote>
       </div>
+    </div>
 </div>
