--- a/TaquillaITH/Views/TicketSale/_Step5.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step5.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="card col-6 align-items-center">
+﻿<div class="card col-6 align-items-center" id="Step5" style="display:none;">
   <div class="card-body col-12">
         <blockquote class="blockquote mb-0 align-items-center">
             <p><b>Película: </b><span id="movie"></span></p>
