--- a/TaquillaITH/Views/TicketSale/_Step5.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step5.cshtml
@@ -6,12 +6,12 @@
             <p><b>Tipo de boleto: </b><span id="ticketType"></span></p>
             <p><b>Efectivo: </b><span id="cash"></span></p>
             <p><b>Credito: </b><span id="credit"></span></p>
-            <p><b>Puntos: </b><span id="points"></span></p>
+            <p><b>Puntos: </b><span id="pointsTicket"></span></p>
             <p><b>Total: </b><span id="total"></span></p>
             <p>------</p>
             <br />
             <br />
         </blockquote>
     </div>
-    <button asp-controller="TicketSale" asp-action="Step1">Regresar</button>
+    <button asp-controller="TicketSale" asp-action="Step1" class="btn btn-light">Finalizar</button>
 </div>
