--- a/TaquillaITH/Views/TicketSale/_Step3.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step3.cshtml
@@ -14,12 +14,15 @@
             <p><b>Hola </b><span id="membershipOwner"></span>!</p>
             <p>Tiene a su disponibilidad: <b><span id="membershipPoints"></span></b> puntos.</p>
             <p>Ingrese la cantidad de puntos que desea utilizar:</p>
-            <input onblur="textInput(this)" type="number" class="form-control col-12 col-xl-12" id="requiredPoints" min="0" max="puntosDisponibles" placeholder="Ej. 10">
+            <input onblur="textInput(this)" type="number" class="form-control col-12 col-xl-12" id="requiredPoints" min="0" placeholder="Ej. 10">
             <button class="col-6 col-xl-6 btn btn-light mt-2 align-self-end" id="To4rthStep">Confirmar</button>
             <footer class="blockquote-footer">Se generarán puntos partir del <cite><span id="membershipPercent"></span>%</cite> de la venta.</footer>
         </blockquote>
       </div>
   </div>
+</div>
+<div class="col-6 align-items-center">
+  <p><b>Total a pagar: </b> $<span id="totalAmountPay"></span></p>
 </div>
 
 <script>
