--- a/TaquillaITH/Views/TicketSale/_Step5.cshtml
+++ b/TaquillaITH/Views/TicketSale/_Step5.cshtml
@@ -11,7 +11,7 @@
             <p>------</p>
             <br />
             <br />
+            <a id="finalbtn" asp-controller="TicketSale" asp-action="Step1" class="btn btn-light">Finalizar</a>
         </blockquote>
     </div>
-    <button asp-controller="TicketSale" asp-action="Step1" class="btn btn-light">Finalizar</button>
 </div>
